--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 body {
   padding-top: 50px;
   font-family: 'Lato', sans-serif;
-  background-color: #d5d5d5;
+  /* background-color: #232323; */
 }
 
 .navbar-brand {
@@ -316,4 +316,125 @@ input {
 
 #copyrights {
   text-align: center;
+}
+
+
+
+/* gallery */
+.galcont{
+  background-color: #232323;
+  width:100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 0;
+}
+
+
+.galcont h2{
+  color: white;
+  font-weight: 100;
+  font-size: 70px;
+  margin-bottom: 100px;
+}
+
+.gallery{
+  background-color: transparent;
+  width: 100%;
+  max-width: 1260px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 160px);
+  grid-auto-rows: 160px;
+  grid-auto-flow: dense;
+  grid-gap: 16px;
+  justify-content: center;
+
+}
+.item{
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 1;
+  grid-template-rows: 1;
+  transition: ease 0.26s;
+  justify-items:center;
+
+}
+
+.item.vi2{
+  grid-row: span 2;
+}
+.item.vi3{
+  grid-row: span 3;
+}
+.item.vi4{
+  grid-row: span 4;
+}
+.item.vi5{
+  grid-row: span 5;
+}
+.item.hi2{
+  grid-column: span 2;
+}
+.item.hi3{
+  grid-column: span 3;
+}
+.item.hi4{
+  grid-column: span 4;
+}
+.item.hi5{
+  grid-column: span 5;
+}
+
+
+.item img{
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  width:100%;
+  height:100%;
+  object-fit: cover;
+  filter: grayscale(0.5);
+  transition: ease 0.26s;
+
+
+}
+
+.item:hover{
+  box-shadow: rgba(0,0,0,0.16) 0px 0px 16px;
+}
+
+.item:hover img{
+  filter: grayscale(0);
+  transform: scale(1.16);
+}
+
+.overlay{
+  position: fixed;
+  background-color: rgba(0,0,0,0.7);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: none;
+  z-index: 2;
+}
+
+.overlay.open{
+  display: grid;
+  align-items: center;
+  justify-items: center;
+}
+
+.close{
+  color: white;
+}
+
+.overlay-inner{
+  max-width: 700px;
+  max-height: 85vh;
+  padding: 20px;
+}
+
+.overlay img{
+  width: 100%;
 }
