--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ body {
 	font-weight: 900;
 	text-transform: uppercase;
 	font-size: 16px;
+  width:150px;
+  height: 20px;
 }
 .navbar-header{
   width: 100%;
@@ -47,7 +49,6 @@ body {
 #headerwrap {
 	background-color: #232323;
 	width: 100%;
-	min-height: 700px;
 	color: white;
 	text-align: center;
 	padding-top: 120px;
@@ -188,11 +189,14 @@ input {
 	}
 
 .btn-yellow {
-	background: #F7CA18;
+	background: #A2CE8A;
 	color: white
 }
 
-
+.main-logo{
+  width:70vw;
+  max-width: 600px;
+}
 /* Contact Form */
 
 #get-in-touch {
@@ -229,7 +233,7 @@ input {
 }
 
 .contact-form .form-send button  {
-  background: #F7CA18;
+  background: #A2CE8A;
   border: 0;
   padding: 15px 50px;
   color: #fff;
@@ -401,7 +405,7 @@ input {
   width:100%;
   height:100%;
   object-fit: cover;
-  filter: grayscale(0.5);
+  filter: grayscale(0.3);
   transition: ease 0.26s;
 
 
@@ -413,7 +417,7 @@ input {
 
 .item:hover img{
   filter: grayscale(0);
-  transform: scale(1.16);
+  transform: scale(1.06);
 }
 
 .overlay{
@@ -428,21 +432,28 @@ input {
 }
 
 .overlay.open{
-  display: grid;
+  display: flex;
   align-items: center;
-  justify-items: center;
+  justify-content: center;
 }
 
 .close{
+  display: none;
   color: white;
 }
 
 .overlay-inner{
-  max-width: 700px;
-  max-height: 70%;
+  display: flex;
+  height: 100%;
+  width: auto;
+  max-height: 80vh;
   padding: 20px;
 }
 
 .overlay img{
-  width: 100%;
+  display: block;
+   max-width:80vw;
+   max-height:80vh;
+   width: auto;
+   height: auto;
 }
